# vtex-client-dll

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  README.md
.github/workflows/: build.yml
include/: addresses.h  debug_console.h  hook.h  main.h  proxy.h  signature_check.h  stdafx.h  trust_check.h
src/: debug_console.cc  dll_main.cc  hook.cc  main.cc  proxy.cc  signature_check.cc  trust_check.cc
